# PISTOL

./: .gitignore  eval_util.py  forget.py  forget_seq.py  pistol.yml  pyproject.toml  slurm.sh  slurm_jobs.sh  summarize_results.py  trainer.py
config/: config.yaml
data/: refusal_response.txt  tofu_full.json
