[tool.poetry]
name = "pistol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
absl-py = "2.1.0"
accelerate = "0.27.2"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
antlr4-python3-runtime = "4.9.3"
anyio = "4.3.0"
async-timeout = "4.0.3"
attrs = "23.2.0"
bitsandbytes = "0.42.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
contourpy = "1.2.0"
cycler = "0.12.1"
dataclasses-json = "0.6.4"
datasets = "2.18.0"
deepspeed = "0.13.5"
dill = "0.3.8"
einops = "0.7.0"
et-xmlfile = "1.1.0"
evaluate = "0.4.1"
exceptiongroup = "1.2.0"
flash-attn = "2.5.6"
fonttools = "4.49.0"
frozenlist = "1.4.1"
fsspec = "2024.2.0"
git-filter-repo = "2.38.0"
greenlet = "3.0.3"
hjson = "3.1.0"
huggingface-hub = "0.21.3"
hydra-core = "1.3.2"
idna = "3.6"
joblib = "1.3.2"
jsonpatch = "1.33"
jsonpointer = "2.4"
kiwisolver = "1.4.5"
langchain = "0.1.11"
langchain-community = "0.0.25"
langchain-core = "0.1.29"
langchain-text-splitters = "0.0.1"
langsmith = "0.1.22"
marshmallow = "3.21.1"
matplotlib = "3.8.3"
multidict = "6.0.5"
multiprocess = "0.70.16"
mypy-extensions = "1.0.0"
ninja = "1.11.1.1"
nltk = "3.8.1"
numpy = "1.26.4"
omegaconf = "2.3.0"
openpyxl = "3.1.2"
orjson = "3.9.15"
packaging = "23.2"
pandas = "2.2.1"
peft = "0.9.0"
pillow = "10.2.0"
psutil = "5.9.8"
py-cpuinfo = "9.0.0"
pyarrow = "15.0.0"
pyarrow-hotfix = "0.6"
pydantic = "2.6.3"
pydantic-core = "2.16.3"
pynvml = "11.5.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
regex = "2023.12.25"
requests = "2.31.0"
responses = "0.18.0"
rouge-score = "0.1.2"
safetensors = "0.4.2"
scipy = "1.12.0"
sentencepiece = "0.2.0"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.28"
tenacity = "8.2.3"
tokenizers = "0.15.2"
tqdm = "4.66.2"
transformers = "4.39.0"
typing-inspect = "0.9.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
xxhash = "3.4.1"
yarl = "1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"